# Wizz_mania_client

./: CMakeLists.txt  Client_2.cpp  Client_2.h  WindowManager.cpp  WindowManager.h  main.cpp
graphic_files/cpp_files/: Button.cpp  UIManager.cpp  WindowManager.cpp  Windows.cpp
graphic_files/hpp_files/: Button.h  UIManager.h  WindowManager.h  Windows.h
logic_files/cpp_files/: Client.cpp  Crypto.cpp  MessageHandler.cpp  Network.cpp
logic_files/hpp_files/: Client.h  Crypto.h  MessageHandler.h  Network.h
